<resources>
    <string name="app_name">SensorTracking</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="main_manual_label">How to use</string>
    <string name="main_manual_text1">Swipe left to access the GPS tracker.</string>
    <string name="main_manual_text2">Swipe left twice to access the accelerometer tracker.</string>
    <string name="main_manual_text3">More info about the app can be found through the About link in top right menu</string>

    <string name="gps_section_label_text">GPS tracking data</string>

    <string name="gps_lat_label">Latitude</string>
    <string name="gps_lat_text">Waiting...</string>

    <string name="gps_lon_label">Longitude</string>
    <string name="gps_lon_text">Waiting...</string>

    <string name="gps_alt_label">Altitude</string>
    <string name="gps_alt_text">Waiting...</string>

    <string name="gps_acc_label">Accuracy</string>
    <string name="gps_acc_text">Waiting...</string>

    <string name="gps_cnt_label">Counter</string>
    <string name="gps_cnt_text">0</string>

    <string name="acc_section_label_text">Accelerometer tracking data</string>

    <string name="acc_movX_label">X acceleration</string>
    <string name="acc_movX_text">Waiting...</string>

    <string name="acc_movZ_label">Z acceleration</string>
    <string name="acc_movZ_text">Waiting...</string>

    <string name="acc_movY_label">Y acceleration</string>
    <string name="acc_movY_text">Waiting...</string>

    <string name="acc_cnt_label">Counter</string>
    <string name="acc_cnt_text">0</string>

    <string name="about_dev_label">Developer</string>
    <string name="about_dev_name">Name</string>

    <string name="about_info_label">Info</string>
    <string name="about_info_text">This app was developed as a part of the \"Programming Mobile Smart Devices\" course in Lahti University of Applied Sciences</string>

    <string name="btn_back_text">Back</string>


</resources>
